src/objects/ADvendio__EnhancedDeliveryData__c.object
<CustomObject>
    <description>Stores extended Delivery Data records, by Device Category, Country, and network part comparable to DFP&apos;s AdUnits. Also supports Publisher Payout and different types of reporting. In the future new Billing Categories.</description>
    <fields>
        <fullName>ADvendio__ADvendio_AdServerIdType__c</fullName>
        <description>Type of the related AdServer-ID.</description>
        <formula>Text(ADvendio__AdServerID__r.ADvendio__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type of the related AdServer-ID.</inlineHelpText>
        <label>AdServerId Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerIDName__c</fullName>
        <description>Name of the related AdServer-ID.</description>
        <formula>ADvendio__AdServerID__r.ADvendio__AdServer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the related AdServer-ID.</inlineHelpText>
        <label>AdServer-ID Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AdServer-ID to which the delivery data record refers.</description>
        <inlineHelpText>AdServer-ID to which the delivery data record refers.</inlineHelpText>
        <label>AdServer ID</label>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>Enhanced Delivery Data</relationshipLabel>
        <relationshipName>EnhancedDeliveryData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerIdCategory__c</fullName>
        <description>Category of the related AdServer-ID.</description>
        <formula>Text(ADvendio__AdServerID__r.ADvendio__Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Category of the related AdServer-ID.</inlineHelpText>
        <label>AdServer-ID Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <description>Campaign-Item, to which the delivery data record refers.</description>
        <inlineHelpText>Campaign-Item, to which the delivery data record refers.</inlineHelpText>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Enhanced Delivery Data</relationshipLabel>
        <relationshipName>EnhancedDeliveryData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__ClicksTotal__c</fullName>
        <description>This field will be automatically filled by a scheduled import job. It displays the delivered clicks of the assigned campaign item.</description>
        <inlineHelpText>This field will be automatically filled by a scheduled import job. It displays the delivered clicks of the assigned campaign item.</inlineHelpText>
        <label>Clicks total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Date__c</fullName>
        <description>Date to which the delivery data record refers.</description>
        <inlineHelpText>Date to which the delivery data record refers.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ImpressionsTotalDownloaded__c</fullName>
        <description>This field will be automatically filled by a scheduled import job. It displays the total number delivered (downloaded) impressions of the assigned campaign item.</description>
        <inlineHelpText>This field will be automatically filled by a scheduled import job. It displays the total number delivered (downloaded) impressions of the assigned campaign item.</inlineHelpText>
        <label>Impressions total downloaded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ImpressionsTotalViewed__c</fullName>
        <description>This field will be automatically filled by a scheduled import job. It displays the total number delivered (viewed) impressions of the assigned campaign item.</description>
        <inlineHelpText>This field will be automatically filled by a scheduled import job. It displays the total number delivered (viewed) impressions of the assigned campaign item.</inlineHelpText>
        <label>Impressions total viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ImpressionsTotal__c</fullName>
        <description>This field will be automatically filled by a scheduled import job. It displays the total number delivered impressions of the assigned campaign item.</description>
        <inlineHelpText>This field will be automatically filled by a scheduled import job. It displays the total number delivered impressions of the assigned campaign item.</inlineHelpText>
        <label>Impressions total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Month__c</fullName>
        <description>Month, to which the delivery data record refers.</description>
        <formula>IF( ISNULL(  ADvendio__Date__c  ), null, DATE( YEAR( ADvendio__Date__c ), MONTH( ADvendio__Date__c ) , 1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month, to which the delivery data record refers.</inlineHelpText>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__VideoViewed100__c</fullName>
        <description>The number of times the video has been played 100%.</description>
        <inlineHelpText>The number of times the video has been played 100%.</inlineHelpText>
        <label>Video viewed 100%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__VideoViewed25__c</fullName>
        <description>The number of times the video has been played 25%.</description>
        <inlineHelpText>The number of times the video has been played 25%.</inlineHelpText>
        <label>Video viewed 25%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__VideoViewed50__c</fullName>
        <description>The number of times the video has been played 50%.</description>
        <inlineHelpText>The number of times the video has been played 50%.</inlineHelpText>
        <label>Video viewed 50%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Enhanced Delivery Data</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EDD-{000}</displayFormat>
        <label>Enhanced Delivery Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enhanced Delivery Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>